# WildfireEntrapment

./: README.md  pyproject.toml
data/: hobart_nodes.gpkg  tfs_nearby_safer_places.geojson  tfs_nearby_safer_places.qmd
